flux-snapshot/2023-04-20-23-55-23-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0308]: arguments to this enum variant are incorrect
   --> src/sort.rs:149:20
    |
149 |             return List::Cons(i, next);
    |                    ^^^^^^^^^^ - expected `i32`, found `&i32`
    |
note: expected `Box<List>`, found `&Box<List>`
   --> src/sort.rs:149:34
    |
149 |             return List::Cons(i, next);
    |                                  ^^^^
    = note: expected struct `std::boxed::Box<sort::List>`
            found reference `&std::boxed::Box<sort::List>`
note: tuple variant defined here
   --> src/sort.rs:21:5
    |
21  |     Cons(i32, Box<List>),
    |     ^^^^
help: consider dereferencing the borrow
    |
149 |             return List::Cons(*i, next);
    |                               +

error[E0308]: mismatched types
   --> src/sort.rs:149:20
    |
144 | pub fn merge_sort(unsorted_list: &List) -> SortedList {
    |                                            ---------- expected `sort::SortedList` because of return type
...
149 |             return List::Cons(i, next);
    |                    ^^^^^^^^^^^^^^^^^^^ expected `SortedList`, found `List`

warning: unreachable statement
   --> src/sort.rs:152:5
    |
146 | /     match unsorted_list {
147 | |         List::Nil => return SortedList::Nil,
148 | |         List::Cons(i, next) => {
149 | |             return List::Cons(i, next);
150 | |         }
151 | |     };
    | |_____- any code following this `match` expression is unreachable, as all arms diverge
152 |       let (l1, l2) = halve(unsorted_list);
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` on by default

For more information about this error, try `rustc --explain E0308`.
warning: `sorting` (bin "sorting") generated 1 warning
error: could not compile `sorting` (bin "sorting") due to 2 previous errors; 1 warning emitted
